Fix ProjectBox button styling not working on IE Edge

--- a/src/styles/components/_project-box.scss
+++ b/src/styles/components/_project-box.scss
@@ -46,7 +46,7 @@
 .project-box__button-container {
     bottom: 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     left: 0;
     padding-top: $xl-size;
     margin-bottom: $m-size;
